metadata/force-app/main/default/objects/Opportunity_ARR_Movement__c/Opportunity_ARR_Movement__c.object-meta.xml
<CustomObject>
    <description>This object contains ARR movements of opportunities.</description>
    <label>Opportunity ARR Movement</label>
    <nameField>
        <label>Opportunity ARR Movement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity ARR Movements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>