metadata/force-app/main/default/objects/Opportunity_ARR_Movement__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <description>Returns ID of the related Account</description>
    <formula>Opportunity__r.Account_ID_18_digits__c</formula>
    <label>Account ID</label>
    <type>Text</type>
</CustomField>