metadata/force-app/main/default/objects/Opportunity_ARR_Movement__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>This field indicates the amount of the ARR value in FX</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>