metadata/force-app/main/default/objects/Opportunity_ARR_Movement__c/fields/ARR_Movement_ID__c.field-meta.xml
<CustomField>
    <fullName>ARR_Movement_ID__c</fullName>
    <formula>casesafeid(Id)</formula>
    <label>ARR Movement ID</label>
    <type>Text</type>
</CustomField>