metadata/force-app/main/default/objects/Opportunity_ARR_Movement__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>BODEV-965 Close Date is used to decide if the movement should be included in Quarterly numbers for a month.</description>
    <formula>Opportunity__r.CloseDate</formula>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>