metadata/force-app/main/default/objects/Opportunity_ARR_Movement__c/fields/Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Size__c</fullName>
    <description>Indicates the Company Size of the opportunity which is related to this movement.</description>
    <formula>Opportunity__r.Company_Size__c</formula>
    <label>Company Size</label>
    <type>Text</type>
</CustomField>