metadata/force-app/main/default/objects/Opportunity_ARR_Movement__c/fields/Contract_isActive__c.field-meta.xml
<CustomField>
    <fullName>Contract_isActive__c</fullName>
    <description>Indicates whether the contract is active or not.</description>
    <formula>Opportunity__r.Contract_IsActive__c</formula>
    <label>Contract isActive</label>
    <type>Checkbox</type>
</CustomField>