metadata/force-app/main/default/objects/Opportunity_ARR_Movement__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>Indicates Industry of the account that this movement is related to.</description>
    <formula>TEXT(Opportunity__r.Account.Industry)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry</label>
    <type>Text</type>
</CustomField>