metadata/force-app/main/default/objects/Opportunity_ARR_Movement__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <description>Indicates the Lead Source of the opportunity to which the movement is related.</description>
    <formula>TEXT(Opportunity__r.LeadSource)</formula>
    <label>Lead Source</label>
    <type>Text</type>
</CustomField>