metadata/force-app/main/default/objects/Opportunity_ARR_Movement__c/fields/Movement_Type__c.field-meta.xml
<CustomField>
    <fullName>Movement_Type__c</fullName>
    <description>This field indicates the type of the ARR movement record.</description>
    <label>Movement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New ARR</fullName>
            </value>
            <value>
                <fullName>New ARR: Platform Transfer</fullName>
            </value>
            <value>
                <fullName>Expansion</fullName>
            </value>
            <value>
                <fullName>Contraction</fullName>
            </value>
            <value>
                <fullName>Churn</fullName>
            </value>
            <value>
                <fullName>Churn: Platform Transfer</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Internal Transfer</fullName>
            </value>
            <value>
                <fullName>New ARR: OEM</fullName>
            </value>
            <value>
                <fullName>Renewal Uplift</fullName>
            </value>
            <value>
                <fullName>Indexation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>