metadata/force-app/main/default/objects/Opportunity_ARR_Movement__c/fields/OEM__c.field-meta.xml
<CustomField>
    <fullName>OEM__c</fullName>
    <description>Returns OEM value</description>
    <formula>IF(
  OR(
    CONTAINS(Opportunity__r.OEM__r.Name, &quot;Acquia&quot;),
    CONTAINS(Opportunity__r.OEM__r.Name, &quot;Workfront&quot;)
  ) &amp;&amp; NOT(CONTAINS(Opportunity__r.OEM__r.Name, &quot;Non OEM&quot;)),
  Opportunity__r.OEM__r.Name,
  &quot;&quot;
)</formula>
    <label>OEM</label>
    <type>Text</type>
</CustomField>