metadata/force-app/main/default/objects/Opportunity_ARR_Movement__c/fields/Opp_Value_Check_Verified__c.field-meta.xml
<CustomField>
    <fullName>Opp_Value_Check_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate the record is manually reviewed and has no issue.</description>
    <label>Opp Value Check Verified</label>
    <type>Checkbox</type>
</CustomField>