metadata/force-app/main/default/objects/Opportunity_ARR_Movement__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>Lookup to the related opportunity.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity ARR Movements</relationshipLabel>
    <relationshipName>Opportunity_ARR_Movements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>