metadata/force-app/main/default/objects/Opportunity_ARR_Movement__c/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <description>Returns ID of the parent opportunity.</description>
    <formula>Opportunity__r.Opportunity_ID_18_digits__c</formula>
    <label>Opportunity ID</label>
    <type>Text</type>
</CustomField>