metadata/force-app/main/default/objects/Opportunity_ARR_Movement__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to capture the order associated with indexation movement</description>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Opportunity ARR Movements</relationshipLabel>
    <relationshipName>Opportunity_ARR_Movements</relationshipName>
    <type>Lookup</type>
</CustomField>