metadata/force-app/main/default/objects/Opportunity_ARR_Movement__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <description>Indicates Platform</description>
    <formula>Opportunity__r.Platform__c</formula>
    <label>Platform</label>
    <type>Text</type>
</CustomField>