metadata/force-app/main/default/objects/Opportunity_ARR_Movement__c/fields/Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Name__c</fullName>
    <description>BODEV-1009: Includes opportunity name and movement type.</description>
    <formula>Opportunity__r.Name &amp; &quot; - &quot; &amp; TEXT(Movement_Type__c)</formula>
    <label>Record Name</label>
    <type>Text</type>
</CustomField>