metadata/force-app/main/default/objects/Opportunity_ARR_Movement__c/fields/Reporting_Date__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Date__c</fullName>
    <description>Indicates Reporting Date of the movement.</description>
    <label>Reporting Date</label>
    <type>Date</type>
</CustomField>