metadata/force-app/main/default/objects/Opportunity_ARR_Movement__c/fields/Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office__c</fullName>
    <description>Returns Sales Office</description>
    <formula>TEXT(Opportunity__r.Sales_Office__c)</formula>
    <label>Sales Office</label>
    <type>Text</type>
</CustomField>