metadata/force-app/main/default/objects/Opportunity_ARR_Movement__c/fields/Sales_Office_Grouped__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office_Grouped__c</fullName>
    <description>Returns grouped Sales Office.</description>
    <formula>CASE( Sales_Office__c,
&quot;Amsterdam&quot;, &quot;EMEA&quot;,
&quot;London&quot;, &quot;EMEA&quot;,
&quot;Dubai&quot;, &quot;EMEA&quot;,
&quot;Boston&quot;, &quot;US&quot;,
&quot;San Mateo&quot;, &quot;US&quot;,
&quot;San Carlos&quot;, &quot;US&quot;,
&quot;Melbourne&quot;, &quot;APAC&quot;,
&quot;&quot;)</formula>
    <label>Sales Office Grouped</label>
    <type>Text</type>
</CustomField>