metadata/force-app/main/default/objects/Opportunity_ARR_Movement__c/fields/Status_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Modified_Date__c</fullName>
    <label>Status Modified Date</label>
    <type>Date</type>
</CustomField>